@@ -1,28 +1,0 @@
->seq1
-AGCGTCACA
->seq2
-ATCGTACTC
->seq3
-GTGTAATTG
->seq3
-GTGTAATTG
->seq3
-GTGTAATTG
->seq3
-GTGTAATTG
->seq3
-GTGTAATTG
->seq3
-GTGTAATTG
->seq4
-CTCGTACTG
->seq4
-CTCGTACTG
->seq4
-CTCGTACTG
->seq4
-CTCGTACTG
->seq4
-CTCGTACTG
->seq4
-CTCGTACTG
